@@ -1,5 +1,9 @@
 /*
+<<<<<<< HEAD
  * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+=======
+ * Copyright (c) 2016, 2019, Oracle and/or its affiliates. All rights reserved.
+>>>>>>> dragonwell_official_upstream/master
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,15 +26,22 @@
  *
  */
 
+package gc.stress.gcbasher;
+
 import java.io.IOException;
 
 /*
  * @test TestGCBasherWithZ
  * @key gc stress
+ * @library /
  * @requires vm.gc.Z
  * @requires vm.flavor == "server" & !vm.emulatedClient & !vm.graal.enabled
  * @summary Stress ZGC
+<<<<<<< HEAD
  * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx384m -server -XX:+UseZGC TestGCBasherWithZ 120000
+=======
+ * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx384m -server -XX:+UnlockExperimentalVMOptions -XX:+UseZGC gc.stress.gcbasher.TestGCBasherWithZ 120000
+>>>>>>> dragonwell_official_upstream/master
  */
 public class TestGCBasherWithZ {
     public static void main(String[] args) throws IOException {
